--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,13 @@ python: 3.6
 cache: pip
 
 env:
-    - TOX_ENV=py36
+  - TOX_ENV=py36
 
 install:
-    - pip install --upgrade pip
-    - pip install tox
+  - pip install --upgrade pip
+  - pip install tox
+  - python setup.py install
 
 script:
-    tox -e $TOX_ENV
+  - python setup.py test
+  - tox -e $TOX_ENV
